Fixing Contrast errors

--- a/chess/styles/chess.css
+++ b/chess/styles/chess.css
@@ -176,9 +176,7 @@ li .active {
     background-color: var(--nav-link-color);
 }
 
-.not-visible {
-    opacity: 0;
-}
+
 
 
 
